fixes #7170 - set a max size for printed images.  possibly too small?

--- a/docs/sites/all/themes/ssd/sass/print.scss
+++ b/docs/sites/all/themes/ssd/sass/print.scss
@@ -37,3 +37,8 @@ footer.footer {
   width: 280px;
   height: auto;
 }
+
+.field-name-body img, .field-name-body p img {
+  max-width: 300px !important;
+  max-height: 500px !important;
+}
